Replace remaining lambdas and remove isBlank