@@ -13,7 +13,7 @@ public class ClienteSearchActionsView extends AbstractSearchActionsView {
 			b.setBorderPainted(false);
 			b.setFocusPainted(false);
 			b.setContentAreaFilled(false);
-			if (b.getToolTipText() == null || b.getToolTipText().isBlank())
+			if (b.getToolTipText() == null || b.getToolTipText().trim().isEmpty())
 				b.setToolTipText(b.getText());
 		}
 	}
