@@ -15,7 +15,7 @@ public class UsuarioSearchActionsView extends AbstractSearchActionsView {
 			b.setBorderPainted(false);
 			b.setFocusPainted(false);
 			b.setContentAreaFilled(false);
-			if (b.getToolTipText() == null || b.getToolTipText().isBlank()) {
+			if (b.getToolTipText() == null || b.getToolTipText().trim().isEmpty()) {
 				b.setToolTipText(b.getText());
 			}
 		}
